--- a/package.json
+++ b/package.json
@@ -77,28 +77,31 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "fs": "0.0.1-security",
     "jsonschema": "^1.1.1",
     "moment": "^2.17.1",
     "mongoose": "^4.7.5",
-    "natural": "^0.4.0",
+    "natural": "^0.5.0",
     "ng2-bootstrap": "^1.1.16",
     "ng2-page-scroll": "^4.0.0-beta.2",
-    "ng2-pagination": "^1.0.1",
+    "ng2-page-transition": "^1.0.4",
+    "ng2-pagination": "^2.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.9",
     "request": "^2.79.0",
     "rxjs": "^5.0.2",
     "ssl-root-cas": "^1.2.3",
+    "web-animations-js": "^2.2.2",
     "winston": "^2.3.0",
     "winston-sentry": "^0.1.5",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.35",
-    "@types/node": "^6.0.54",
+    "@types/node": "^7.0.5",
     "angular2-template-loader": "^0.6.0",
     "assert": "^1.4.1",
     "async": "^2.1.4",
@@ -107,7 +110,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp-eslint": "^3.0.1",
     "gulp-istanbul": "^1.1.1",
-    "gulp-mocha": "^3.0.1",
+    "gulp-mocha": "^4.0.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-watch": "^4.3.11",
@@ -116,9 +119,9 @@
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
-    "ts-loader": "^1.3.3",
+    "ts-loader": "^2.0.0",
     "typescript": "^2.1.4",
-    "webpack": "^1.14.0",
-    "webpack-merge": "^2.0.0"
+    "webpack": "^2.2.1",
+    "webpack-merge": "^3.0.0"
   }
 }
