use angular-cli

--- a/package.json
+++ b/package.json
@@ -1,127 +1,46 @@
 {
   "name": "lebenpur",
-  "version": "1.0.0",
-  "description": "Webpage Leben pur Fotografie",
-  "engines": {
-    "node": ">=6.0.0"
-  },
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-    "start": "./node_modules/.bin/gulp start",
-    "test": "./node_modules/.bin/gulp test",
-    "debug": "./node_modules/.bin/gulp debug",
-    "restart": "./node_modules/.bin/gulp restart",
-    "lint": "./node_modules/.bin/gulp eslint",
-    "build": "npm install && npm run webpack",
-    "watch": "rimraf dist && ./node_modules/.bin/webpack --config config/webpack.dev.js --progress --profile --watch",
-    "webpack": "rimraf dist && ./node_modules/.bin/webpack --config config/webpack.prod.js --progress --profile --bail"
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
   },
-  "eslintConfig": {
-    "env": {
-      "mocha": true,
-      "node": true,
-      "es6": true
-    },
-    "rules": {
-      "no-var": "error",
-      "prefer-arrow-callback": "error",
-      "prefer-spread": "error",
-      "no-trailing-spaces": "error",
-      "prefer-template": "warn",
-      "indent": [
-        "error",
-        4,
-        {
-          "SwitchCase": 1
-        }
-      ],
-      "semi": "error",
-      "comma-dangle": "error",
-      "comma-style": [
-        "error",
-        "last"
-      ],
-      "arrow-spacing": "error",
-      "eol-last": "warn",
-      "handle-callback-err": "warn",
-      "no-extra-semi": "warn",
-      "space-infix-ops": "warn",
-      "valid-typeof": "warn",
-      "no-undef": "warn",
-      "no-unused-expressions": "warn",
-      "no-unused-vars": "warn",
-      "no-use-before-define": [
-        "warn",
-        "nofunc"
-      ],
-      "quotes": [
-        "warn",
-        "single"
-      ],
-      "prefer-rest-params": "error",
-      "camelcase": "off",
-      "new-cap": "off",
-      "no-path-concat": "off"
-    }
-  },
+  "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.1",
-    "@angular/compiler": "~2.4.1",
-    "@angular/core": "~2.4.1",
-    "@angular/forms": "~2.4.1",
-    "@angular/http": "~2.4.1",
-    "@angular/platform-browser": "~2.4.1",
-    "@angular/platform-browser-dynamic": "~2.4.1",
-    "@angular/router": "~3.4.1",
-    "@angular/upgrade": "~2.4.1",
-    "angular2-moment": "^1.0.0",
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "fs": "0.0.1-security",
-    "jsonschema": "^1.1.1",
-    "moment": "^2.17.1",
-    "mongoose": "^4.7.5",
-    "natural": "^0.5.0",
-    "ng2-bootstrap": "^1.1.16",
-    "ng2-page-scroll": "^4.0.0-beta.2",
-    "ng2-page-transition": "^1.0.4",
-    "ng2-pagination": "^2.0.0",
-    "path": "^0.12.7",
-    "reflect-metadata": "^0.1.9",
-    "request": "^2.79.0",
-    "rxjs": "^5.0.2",
-    "ssl-root-cas": "^1.2.3",
-    "web-animations-js": "^2.2.2",
-    "winston": "^2.3.0",
-    "winston-sentry": "^0.1.5",
-    "zone.js": "^0.7.4"
+    "rxjs": "^5.0.1",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
-    "@types/node": "^7.0.5",
-    "angular2-template-loader": "^0.6.0",
-    "assert": "^1.4.1",
-    "async": "^2.1.4",
-    "css-loader": "^0.26.1",
-    "css-to-string-loader": "^0.1.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-istanbul": "^1.1.1",
-    "gulp-mocha": "^4.0.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-watch": "^4.3.11",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
-    "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
-    "sinon": "^1.17.6",
-    "ts-loader": "^2.0.1",
-    "typescript": "^2.1.4",
-    "webpack": "^2.2.1",
-    "webpack-merge": "^3.0.0"
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.28.3",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "~4.0.13",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3"
   }
 }
