--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.3.2",
     "@angular/common": "^4.2.2",
     "@angular/compiler": "^4.2.2",
     "@angular/core": "^4.2.2",
@@ -28,7 +29,7 @@
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.1",
+    "@angular/cli": "^1.2.6",
     "@angular/compiler-cli": "^4.2.2",
     "@types/jasmine": "2.5.52",
     "@types/node": "^7.0.31",
