--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "test": "ng test",
-    "deploy": "ng build -prod -sm -ec -bh /LP/ && gh-pages -d dist",
+    "deploy": "ng build -prod -sm -ec && gh-pages -d dist",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
