--- a/package.json
+++ b/package.json
@@ -22,14 +22,21 @@
     "@angular/platform-browser": "^4.2.2",
     "@angular/platform-browser-dynamic": "^4.2.2",
     "@angular/router": "^4.2.2",
+    "angularfire2": "^4.0.0-rc.2",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.4.0",
+    "fs": "0.0.1-security",
+    "jsonschema": "^1.2.0",
     "ng2-bootstrap": "^1.6.3",
+    "nodemailer": "^4.1.1",
     "rxjs": "^5.4.1",
     "ts-helpers": "^1.1.1",
+    "winston": "^2.4.0",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.6",
+    "@angular/cli": "^1.4.4",
     "@angular/compiler-cli": "^4.2.2",
     "@types/jasmine": "2.5.52",
     "@types/node": "^7.0.31",
