--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-  "name": "lebenpur",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "test": "ng test",
-    "deploy": "ng build -prod -sm -ec && gh-pages -d dist",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^4.3.2",
-    "@angular/common": "^4.2.2",
-    "@angular/compiler": "^4.2.2",
-    "@angular/core": "^4.2.2",
-    "@angular/forms": "^4.2.2",
-    "@angular/http": "^4.2.2",
-    "@angular/platform-browser": "^4.2.2",
-    "@angular/platform-browser-dynamic": "^4.2.2",
-    "@angular/router": "^4.2.2",
-    "angularfire2": "^4.0.0-rc.2",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.4.1",
-    "firebase": "^4.4.0",
-    "fs": "0.0.1-security",
-    "jsonschema": "^1.2.0",
-    "ng2-bootstrap": "^1.6.3",
-    "nodemailer": "^4.1.1",
-    "rxjs": "^5.4.1",
-    "ts-helpers": "^1.1.1",
-    "winston": "^2.4.0",
-    "zone.js": "^0.8.12"
-  },
-  "devDependencies": {
-    "@angular/cli": "^1.4.4",
-    "@angular/compiler-cli": "^4.2.2",
-    "@types/jasmine": "2.5.52",
-    "@types/node": "^7.0.31",
-    "codelyzer": "~3.0.1",
-    "gh-pages": "^1.0.0",
-    "jasmine-core": "2.6.3",
-    "jasmine-spec-reporter": "4.1.0",
-    "karma": "1.7.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.6.0",
-    "protractor": "~5.1.2",
-    "ts-node": "3.0.6",
-    "tslint": "^5.4.3",
-    "typescript": "~2.3.4",
-    "webpack": "^2.6.1"
-  }
+    "name": "lebenpur",
+    "version": "0.0.0",
+    "license": "MIT",
+    "angular-cli": {},
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --host 0.0.0.0",
+        "test": "ng test",
+        "deploy": "ng build -prod -sm -ec && gh-pages -d dist",
+        "pree2e": "webdriver-manager update --standalone false --gecko false",
+        "e2e": "protractor"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^4.3.2",
+        "@angular/common": "^4.2.2",
+        "@angular/compiler": "^4.2.2",
+        "@angular/core": "^4.2.2",
+        "@angular/forms": "^4.2.2",
+        "@angular/http": "^4.2.2",
+        "@angular/platform-browser": "^4.2.2",
+        "@angular/platform-browser-dynamic": "^4.2.2",
+        "@angular/router": "^4.2.2",
+        "angularfire2": "^4.0.0-rc.2",
+        "body-parser": "^1.18.2",
+        "core-js": "^2.4.1",
+        "firebase": "^4.4.0",
+        "fs": "0.0.1-security",
+        "jsonschema": "^1.2.0",
+        "ng2-bootstrap": "^1.6.3",
+        "nodemailer": "^4.1.1",
+        "rxjs": "^5.4.1",
+        "ts-helpers": "^1.1.1",
+        "winston": "^2.4.0",
+        "zone.js": "^0.8.12"
+    },
+    "devDependencies": {
+        "@angular/cli": "^1.4.4",
+        "@angular/compiler-cli": "^4.2.2",
+        "@types/jasmine": "2.5.52",
+        "@types/node": "^7.0.31",
+        "codelyzer": "~3.0.1",
+        "gh-pages": "^1.0.0",
+        "jasmine-core": "2.6.3",
+        "jasmine-spec-reporter": "4.1.0",
+        "karma": "1.7.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-cli": "^1.0.1",
+        "karma-jasmine": "^1.0.2",
+        "karma-remap-istanbul": "^0.6.0",
+        "protractor": "~5.1.2",
+        "ts-node": "3.0.6",
+        "tslint": "^5.4.3",
+        "typescript": "~2.3.4",
+        "webpack": "^2.6.1"
+    }
 }
