--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
         "@types/node": "^7.0.31",
         "codelyzer": "~3.0.1",
         "gh-pages": "^1.0.0",
+        "gulp": "^3.9.1",
+        "gulp-eslint": "^5.0.0",
+        "gulp-mocha": "^6.0.0",
+        "gulp-nodemon": "^2.2.1",
         "jasmine-core": "2.6.3",
         "jasmine-spec-reporter": "4.1.0",
         "karma": "1.7.0",
