--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "firebase": "^4.4.0",
         "fs": "0.0.1-security",
         "jsonschema": "^1.2.0",
-        "ng2-bootstrap": "^1.6.3",
+        "ngx-bootstrap": "^2.0.0-beta.9",
         "nodemailer": "^4.1.1",
         "rxjs": "^5.4.1",
         "ts-helpers": "^1.1.1",
